# TechTalk

./: Untitled.ipynb  client_secret_354685048115-oc6aut8p55h13hgpgs85rgk13si6asfq.apps.googleusercontent.com.json  pyproject.toml
MNIST_Example/src/notebooks/: gsheet_test.ipynb  lightning_example.ipynb  mnist_hello_world.ipynb  token.pickle
MNIST_Example/src/notebooks/.ipynb_checkpoints/: lightning_example-checkpoint.ipynb
