[tool.poetry]
name = "intro2dl"
version = "0.1.0"
description = ""
authors = ["Yusuf Khan <ykhan34@gatech.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
lab = "^6.4"
rise = "^5.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
