[tool.poetry]
name = "intro2dl"
version = "0.1.0"
description = ""
authors = ["Yusuf Khan <ykhan34@gatech.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
jupyter = "^1.0.0"
lab = "^6.4"
rise = "^5.7.1"
pandas = "^1.3.2"
google_spreadsheet = "^0.0.6"
google-auth-oauthlib = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
